--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countries</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <input
+        class="input-search"
+        type="text"
+        placeholder="Введите  название страны"
+      />
+      <div class="result-search"></div>
+    </div>
+  </body>
 </html>
